Add whitepaper card to sidebar

--- a/netlify/index.html
+++ b/netlify/index.html
@@ -643,6 +643,16 @@
         </section>
 
         <section class="card">
+          <h2>Aprende sobre Bitcoin</h2>
+          <div class="helper">
+            Explora el documento original para entender los fundamentos de la red y su diseño.
+          </div>
+          <a class="link" href="https://bitcoin.org/bitcoin.pdf" target="_blank" rel="noopener noreferrer">
+            Leer el Whitepaper
+          </a>
+        </section>
+
+        <section class="card">
           <h2>Gestión de claves y seed</h2>
           <div class="form">
             <div>
