Add tooltips for network metrics

--- a/netlify/index.html
+++ b/netlify/index.html
@@ -649,8 +649,14 @@
               </div>
               <span class="progress-chip warning" id="sync-chip">Sincronizando</span>
             </div>
-            <div class="network-row"><span>Latencia media</span><strong id="latency">182 ms</strong></div>
-            <div class="network-row"><span>MemPool</span><strong id="mempool">123 MB</strong></div>
+            <div class="network-row">
+              <span>Latencia media</span>
+              <strong><span id="latency" title="No disponible">182 ms</span></strong>
+            </div>
+            <div class="network-row">
+              <span>MemPool</span>
+              <strong><span id="mempool" title="No disponible">123 MB</span></strong>
+            </div>
             <div class="network-row"><span>Próximo bloque</span><strong id="next-block">~8 min</strong></div>
           </div>
         </section>
